<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Wisam Naji on 11/12/17 3:02 PM.
  ~ Copyright (c) 2017. All rights reserved.
  ~ Copying, redistribution or usage of material used in this file is free for educational purposes ONLY and should not be used in profitable context.
  ~
  ~ Last modified on 11/12/17 3:02 PM
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Product"
            type="com.recoded.estock.Product"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            tools:context="com.recoded.estock.DetailsActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            style="@style/text_input_layout">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/product_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/product_name"
                                android:text="@{Product.productName}"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            style="@style/text_input_layout">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/product_desc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/product_description"
                                android:inputType="textMultiLine"
                                android:text="@{Product.productDesc}"/>
                        </android.support.design.widget.TextInputLayout>

                        <Spinner
                            android:id="@+id/category_selector"
                            style="@style/text_input_layout"
                            android:spinnerMode="dialog"/>

                        <android.support.design.widget.TextInputLayout
                            style="@style/text_input_layout">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/product_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/product_price"
                                android:inputType="numberDecimal"
                                android:text="@{String.valueOf(Product.priceD)}"/>
                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            style="@style/text_input_layout"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/quantity_dec_button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:layout_weight="1"
                                android:text="-"/>

                            <android.support.design.widget.TextInputLayout
                                style="@style/text_input_layout"
                                android:layout_width="0dp"
                                android:layout_weight="2">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/product_quantity"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/quantity"
                                    android:inputType="number"
                                    android:gravity="center"
                                    android:text="@{String.valueOf(Product.quantity)}"/>
                            </android.support.design.widget.TextInputLayout>

                            <Button
                                android:id="@+id/quantity_inc_button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:layout_weight="1"
                                android:text="+"/>
                            <Button
                                android:id="@+id/order_more"
                                android:layout_width="0dp"
                                android:layout_weight="3"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:visibility="gone"
                                android:layout_marginLeft="10dp"
                                android:text="Order"/>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/product_image"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:layout_margin="8dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/image_placeholder"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:elevation="4dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancel_button"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/add_product_button"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/add"/>
            <Button
                android:id="@+id/delete_product_button"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/delete"
                android:textColor="@color/colorPrice"
                android:visibility="gone"/>
        </LinearLayout>
    </FrameLayout>
</layout>